external-crates/move/crates/move-compiler/tests/move_check/expansion/use_nested_self_as_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:8:26
  │
8 │     use 0x2::X::{Self as B, foo, S};
  │                          ^ Unused 'use' of alias 'B'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:10:19
   │
10 │     struct X { f: X::S, f2: S }
   │                   ^ Unbound module alias 'X'

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_nested_self_as_invalid.move:12:9
   │
12 │         X::foo();
   │         ^ Unbound module alias 'X'
